Build changes for automatic releases

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@ before_cache:
   - find $HOME/.sbt        -name "*.lock"               -print -delete
 
 script:
-  - sbt ++$TRAVIS_SCALA_VERSION clean coverage test coverageReport
+  - sbt ++$TRAVIS_SCALA_VERSION ci_all
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
+  - ./project/publish
