--- a/.travis.yml
+++ b/.travis.yml
@@ -7,19 +7,34 @@ scala:
 
 sudo: false
 
+stages:
+  - name: test
+  - name: release
+    if: (branch = master AND type = push) OR (tag IS present)
+
+jobs:
+  include:
+    - env: TEST="scalafmt"
+      script: ./bin/scalafmt --test
+    - env: TEST="compile"
+      script: sbt clean compile coverage test coverageReport && bash <(curl -s https://codecov.io/bash)
+    - stage: release
+      script: sbt ci-release
+
 cache:
   directories:
+    - $HOME/.sbt/1.0/dependency
+    - $HOME/.sbt/boot/scala*
+    - $HOME/.sbt/launchers
     - $HOME/.ivy2/cache
-    - $HOME/.sbt
+    - $HOME/.coursier
 
 before_cache:
-  - rm -fv $HOME/.ivy2/.sbt.ivy.lock
-  - find $HOME/.ivy2/cache -name "ivydata-*.properties" -print -delete
-  - find $HOME/.sbt        -name "*.lock"               -print -delete
+  - du -h -d 1 $HOME/.ivy2/cache
+  - du -h -d 2 $HOME/.sbt/
+  - find $HOME/.sbt -name "*.lock" -type f -delete
+  - find $HOME/.ivy2/cache -name "ivydata-*.properties" -type f -delete
+  - rm -rf $HOME/.ivy2/local
 
-script:
-  - sbt ++$TRAVIS_SCALA_VERSION ci-all
-
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
-  - ./project/publish
+before_install:
+  - git fetch --tags
