--- a/.travis.yml
+++ b/.travis.yml
@@ -8,16 +8,20 @@ scala:
 sudo: false
 
 stages:
+  - name: format
+  - name: compile
   - name: test
   - name: release
     if: (branch = master AND type = push) OR (tag IS present)
 
 jobs:
   include:
-    - env: TEST="scalafmt"
-      script: ./bin/scalafmt --test
-    - env: TEST="compile"
-      script: sbt clean compile coverage test coverageReport && bash <(curl -s https://codecov.io/bash)
+    - stage: format
+      script: sbt myproject/scalafmt myproject/test:scalafmt
+    - stage: compile
+      script: sbt clean compile
+    - stage: test
+      script: sbt coverage test coverageReport && bash <(curl -s https://codecov.io/bash)
     - stage: release
       script: sbt ci-release
 
