--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ jobs:
     - stage: compile
       script: sbt scalafmtCheck
     - stage: compile
-      script: sbt clean compile
+      script: sbt compile
     - stage: test
       script: sbt coverage test coverageReport && bash <(curl -s https://codecov.io/bash)
     - stage: release
