--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,15 +1,10 @@
-style = defaultWithAlign
-
-align.openParenCallSite = false
+align = none
 align.openParenDefnSite = false
-align.tokens = [{code = "->"}, {code = "<-"}, {code = "=>", owner = "Case"}]
-continuationIndent.callSite = 2
-continuationIndent.defnSite = 2
-danglingParentheses = true
-indentOperator = spray
-maxColumn = 120
-newlines.alwaysBeforeTopLevelStatements = true
-project.excludeFilters = [".*\\.sbt"]
-rewrite.rules = [RedundantParens, SortImports]
-spaces.inImportCurlyBraces = false
-unindentTopLevelOperators = true
+align.openParenCallSite = false
+align.tokens = []
+optIn = {
+  configStyleArguments = false
+}
+danglingParentheses = false
+docstrings = JavaDoc
+maxColumn = 98
