first commit of website

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ jobs:
       script: sbt coverage test coverageReport && bash <(curl -s https://codecov.io/bash)
     - stage: release
       script: sbt ci-release
+    - stage: release
+      script: sbt docs/docusaurusPublishGhpages
 
 cache:
   directories:
