--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,12 @@ spark-wa*
 
 /metastore_db/
 derby.log
+
+website/translated_docs
+website/build/
+website/yarn.lock
+website/node_modules
+website/i18n/*
+website/static/api
+
+spark-ensemble-docs/*
