website mostly done

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,10 +25,9 @@ jobs:
       script: sbt coverage test coverageReport && bash <(curl -s https://codecov.io/bash)
     - stage: release
       script: sbt ci-release
-    - stage: release
-      script: sbt docs/docusaurusPublishGhpages
 
 cache:
+  yarn: true
   directories:
     - $HOME/.sbt/1.0/dependency
     - $HOME/.sbt/boot/scala*
@@ -45,3 +44,4 @@ before_cache:
 
 before_install:
   - git fetch --tags
+  - npm i -g npm@8.10
