--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,3 @@
-version = "2.3.2"
 align = none
 align.openParenDefnSite = false
 align.openParenCallSite = false
@@ -6,6 +5,8 @@ align.tokens = []
 optIn = {
   configStyleArguments = false
 }
-danglingParentheses = false
-docstrings = JavaDoc
+danglingParentheses.preset = false
+docstrings.style = Asterisk
 maxColumn = 98
+runner.dialect = scala213
+version = 3.5.9
