--- a/website/package.json
+++ b/website/package.json
@@ -10,8 +10,8 @@
     "publish-gh-pages": "docusaurus deploy"
   },
   "dependencies": {
-    "@docusaurus/core": "2.1.0",
-    "@docusaurus/preset-classic": "2.1.0",
+    "@docusaurus/core": "^2.2.0",
+    "@docusaurus/preset-classic": "^2.2.0",
     "classnames": "2.3.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
